--- a/Renombrar etiquetas roboflow.ipynb
+++ b/Renombrar etiquetas roboflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNt64u/epZ6tRcvEvWL1wfa",
+      "authorship_tag": "ABX9TyP0jUduU8AC/FAl5VbwhBns",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sx2Zc7SnQ7nw",
-        "outputId": "437f26b6-8b61-4d52-d4d1-989d4fc7ca3a"
+        "outputId": "f5c85c52-79cf-4657-ce44-0d6c0ceb836f"
       },
       "outputs": [
         {
@@ -80,7 +80,7 @@
         "id": "CEenYje9SASw",
         "outputId": "b3081966-d0ce-44aa-993d-8dd7625618a2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "id": "J_1OVEIaQ8fL",
         "outputId": "a3cfbe7f-94fa-428c-e84a-1aebfc0ae021"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
         "id": "3m4rvCZcTb3y",
         "outputId": "aa95d2f8-fdb1-4154-88d3-2ba2bb87a12e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,13 +441,211 @@
         "id": "nQ_nl6nTXwqE",
         "outputId": "8295ecc4-a629-4874-cdfd-2f4a471dd686"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Número de archivos en la carpeta /content/dataset/train/new_labels: 239\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Ruta de las carpetas de imágenes y etiquetas\n",
+        "ruta_imagenes = '/content/drive/MyDrive/TFM/dataset_Jorge/train/images'\n",
+        "ruta_etiquetas = '/content/drive/MyDrive/TFM/dataset_Jorge/train/labels'\n",
+        "\n",
+        "# Función para obtener la lista de archivos sin extensiones\n",
+        "def obtener_lista_archivos(ruta_carpeta):\n",
+        "    return {os.path.splitext(archivo)[0] for archivo in os.listdir(ruta_carpeta) if os.path.isfile(os.path.join(ruta_carpeta, archivo))}\n",
+        "\n",
+        "# Obtener las listas de archivos sin extensiones\n",
+        "archivos_imagenes = obtener_lista_archivos(ruta_imagenes)\n",
+        "archivos_etiquetas = obtener_lista_archivos(ruta_etiquetas)\n",
+        "\n",
+        "# Comparar las listas de archivos\n",
+        "archivos_en_ambas = archivos_imagenes.intersection(archivos_etiquetas)\n",
+        "archivos_solo_imagenes = archivos_imagenes.difference(archivos_etiquetas)\n",
+        "archivos_solo_etiquetas = archivos_etiquetas.difference(archivos_imagenes)\n",
+        "\n",
+        "# Convertir los sets a listas\n",
+        "archivos_en_ambas = list(archivos_en_ambas)\n",
+        "archivos_solo_imagenes = list(archivos_solo_imagenes)\n",
+        "archivos_solo_etiquetas = list(archivos_solo_etiquetas)\n",
+        "\n",
+        "# Imprimir los resultados\n",
+        "print(f'Archivos en ambas carpetas ({len(archivos_en_ambas)}): {archivos_en_ambas}')\n",
+        "print(f'Archivos solo en la carpeta de imágenes ({len(archivos_solo_imagenes)}): {archivos_solo_imagenes}')\n",
+        "print(f'Archivos solo en la carpeta de etiquetas ({len(archivos_solo_etiquetas)}): {archivos_solo_etiquetas}')\n"
+      ],
+      "metadata": {
+        "id": "EgrP_OTOZhd9",
+        "outputId": "7ad59841-b92c-4fd4-d583-977185989e19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archivos en ambas carpetas (239): ['100H0241', '100H0196', '100H0041', '100H0069', '100H0242', '100H0131', '100H0190', '100H0194', '100H0256', '100H0145', '100H0216', '100H0063', '100H0246', '100H0075', '100H0046', '100H0100', '100H0163', '100H0094', '100H0129', '100H0232', '100H0153', '100H0104', '100H0095', '100H0248', '100H0198', '100H0098', '100H0215', '100H0236', '100H0020', '100H0151', '100H0142', '100H0002', '100H0217', '100H0047', '100H0008', '100H0060', '100H0205', '100H0177', '100H0031', '100H0086', '100H0249', '100H0188', '100H0019', '100H0191', '100H0089', '100H0247', '100H0169', '100H0174', '100H0081', '100H0044', '100H0083', '100H0092', '100H0262', '100H0071', '100H0143', '100H0164', '100H0189', '100H0146', '100H0049', '100H0012', '100H0101', '100H0065', '100H0222', '100H0137', '100H0175', '100H0130', '100H0170', '100H0179', '100H0117', '100H0226', '100H0099', '100H0223', '100H0023', '100H0245', '100H0182', '100H0058', '100H0068', '100H0212', '100H0090', '100H0126', '100H0186', '100H0171', '100H0039', '100H0053', '100H0079', '100H0078', '100H0180', '100H0108', '100H0160', '100H0052', '100H0029', '100H0225', '100H0250', '100H0200', '100H0176', '100H0028', '100H0013', '100H0003', '100H0127', '100H0228', '100H0124', '100H0252', '100H0017', '100H0027', '100H0070', '100H0221', '100H0260', '100H0087', '100H0112', '100H0007', '100H0258', '100H0206', '100H0064', '100H0085', '100H0147', '100H0034', '100H0132', '100H0197', '100H0107', '100H0184', '100H0009', '100H0106', '100H0209', '100H0243', '100H0238', '100H0144', '100H0235', '100H0082', '100H0210', '100H0133', '100H0138', '100H0154', '100H0091', '100H0072', '100H0102', '100H0178', '100H0156', '100H0149', '100H0227', '100H0050', '100H0001', '100H0201', '100H0202', '100H0208', '100H0213', '100H0057', '100H0110', '100H0066', '100H0115', '100H0018', '100H0125', '100H0048', '100H0135', '100H0141', '100H0033', '100H0168', '100H0036', '100H0004', '100H0231', '100H0016', '100H0056', '100H0076', '100H0059', '100H0139', '100H0230', '100H0261', '100H0207', '100H0105', '100H0093', '100H0155', '100H0084', '100H0077', '100H0011', '100H0195', '100H0203', '100H0134', '100H0192', '100H0109', '100H0051', '100H0116', '100H0111', '100H0032', '100H0253', '100H0185', '100H0014', '100H0103', '100H0005', '100H0010', '100H0006', '100H0080', '100H0043', '100H0229', '100H0219', '100H0218', '100H0214', '100H0128', '100H0211', '100H0263', '100H0224', '100H0172', '100H0096', '100H0042', '100H0199', '100H0136', '100H0040', '100H0159', '100H0123', '100H0166', '100H0244', '100H0118', '100H0167', '100H0045', '100H0257', '100H0173', '100H0026', '100H0024', '100H0165', '100H0181', '100H0015', '100H0088', '100H0152', '100H0265', '100H0119', '100H0067', '100H0233', '100H0025', '100H0162', '100H0251', '100H0074', '100H0240', '100H0054', '100H0140', '100H0030', '100H0035', '100H0239', '100H0157', '100H0234', '100H0193', '100H0204']\n",
+            "Archivos solo en la carpeta de imágenes (26): ['100H0187', '100H0158', '100H0038', '100H0264', '100H0113', '100H0237', '100H0254', '100H0114', '100H0061', '100H0259', '100H0062', '100H0097', '100H0037', '100H0122', '100H0055', '100H0161', '100H0021', '100H0022', '100H0073', '100H0121', '100H0150', '100H0255', '100H0183', '100H0220', '100H0120', '100H0148']\n",
+            "Archivos solo en la carpeta de etiquetas (0): []\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import shutil\n",
+        "\n",
+        "# Rutas de las carpetas originales y de destino\n",
+        "ruta_origen_imagenes = '/content/drive/MyDrive/TFM/dataset_Jorge/train/images'\n",
+        "ruta_origen_etiquetas = '/content/drive/MyDrive/TFM/dataset_Jorge/train/labels'\n",
+        "ruta_destino = '/content/drive/MyDrive/TFM/dataset_Jorge_V2'\n",
+        "\n",
+        "# Crear la carpeta de destino si no existe\n",
+        "if not os.path.exists(ruta_destino):\n",
+        "    os.makedirs(ruta_destino)\n",
+        "\n",
+        "# Copiar solo los archivos en la lista de ambas imágenes y etiquetas\n",
+        "for archivo in archivos_en_ambas:\n",
+        "    ruta_imagen = os.path.join(ruta_origen_imagenes, archivo + '.jpg')\n",
+        "    ruta_etiqueta = os.path.join(ruta_origen_etiquetas, archivo + '.txt')\n",
+        "\n",
+        "    # Verificar si ambos archivos existen antes de copiar\n",
+        "    if os.path.exists(ruta_imagen) and os.path.exists(ruta_etiqueta):\n",
+        "        shutil.copy(ruta_imagen, ruta_destino)\n",
+        "        shutil.copy(ruta_etiqueta, ruta_destino)\n",
+        "\n",
+        "print(f'Carpeta \"dataset_Jorge_V2\" creada y archivos copiados')\n"
+      ],
+      "metadata": {
+        "id": "6prNjhY6ayVn",
+        "outputId": "18a6060b-e9d3-4657-d72c-45e8c7ea1c83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Carpeta \"dataset_Jorge_V2\" creada y archivos copiados\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import shutil\n",
+        "\n",
+        "# Rutas de las carpetas originales y de destino\n",
+        "ruta_origen_imagenes = '/content/drive/MyDrive/TFM/dataset_Jorge/train/images'\n",
+        "ruta_origen_etiquetas = '/content/drive/MyDrive/TFM/dataset_Jorge/train/labels'\n",
+        "ruta_destino = '/content/drive/MyDrive/TFM/dataset_Jorge_V2'\n",
+        "\n",
+        "# Crear las carpetas de destino si no existen\n",
+        "if not os.path.exists(ruta_destino):\n",
+        "    os.makedirs(os.path.join(ruta_destino, 'images'))\n",
+        "    os.makedirs(os.path.join(ruta_destino, 'labels'))\n",
+        "\n",
+        "# Copiar solo los archivos en la lista de ambas imágenes y etiquetas\n",
+        "for archivo in archivos_en_ambas:\n",
+        "    ruta_imagen_origen = os.path.join(ruta_origen_imagenes, archivo + '.jpg')\n",
+        "    ruta_etiqueta_origen = os.path.join(ruta_origen_etiquetas, archivo + '.txt')\n",
+        "\n",
+        "    ruta_imagen_destino = os.path.join(ruta_destino, 'images', archivo + '.jpg')\n",
+        "    ruta_etiqueta_destino = os.path.join(ruta_destino, 'labels', archivo + '.txt')\n",
+        "\n",
+        "    # Verificar si ambos archivos existen antes de copiar\n",
+        "    if os.path.exists(ruta_imagen_origen) and os.path.exists(ruta_etiqueta_origen):\n",
+        "        shutil.copy(ruta_imagen_origen, ruta_imagen_destino)\n",
+        "        shutil.copy(ruta_etiqueta_origen, ruta_etiqueta_destino)\n",
+        "\n",
+        "print(f'Carpeta \"dataset_Jorge_V2\" creada con las imágenes y etiquetas separadas')\n"
+      ],
+      "metadata": {
+        "id": "ACQrAYGZbHNs",
+        "outputId": "497dbc98-4bf0-4821-bc90-e9bcc99567b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Carpeta \"dataset_Jorge_V2\" creada con las imágenes y etiquetas separadas\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Ruta de las carpetas de imágenes y etiquetas\n",
+        "ruta_imagenes = '/content/drive/MyDrive/TFM/dataset_Jorge_V2/images'\n",
+        "ruta_etiquetas = '/content/drive/MyDrive/TFM/dataset_Jorge_V2/labels'\n",
+        "\n",
+        "# Función para obtener la lista de archivos sin extensiones\n",
+        "def obtener_lista_archivos(ruta_carpeta):\n",
+        "    return {os.path.splitext(archivo)[0] for archivo in os.listdir(ruta_carpeta) if os.path.isfile(os.path.join(ruta_carpeta, archivo))}\n",
+        "\n",
+        "# Obtener las listas de archivos sin extensiones\n",
+        "archivos_imagenes = obtener_lista_archivos(ruta_imagenes)\n",
+        "archivos_etiquetas = obtener_lista_archivos(ruta_etiquetas)\n",
+        "\n",
+        "# Comparar las listas de archivos\n",
+        "archivos_en_ambas = archivos_imagenes.intersection(archivos_etiquetas)\n",
+        "archivos_solo_imagenes = archivos_imagenes.difference(archivos_etiquetas)\n",
+        "archivos_solo_etiquetas = archivos_etiquetas.difference(archivos_imagenes)\n",
+        "\n",
+        "# Convertir los sets a listas\n",
+        "archivos_en_ambas = list(archivos_en_ambas)\n",
+        "archivos_solo_imagenes = list(archivos_solo_imagenes)\n",
+        "archivos_solo_etiquetas = list(archivos_solo_etiquetas)\n",
+        "\n",
+        "# Imprimir los resultados\n",
+        "print(f'Archivos en ambas carpetas ({len(archivos_en_ambas)}): {archivos_en_ambas}')\n",
+        "print(f'Archivos solo en la carpeta de imágenes ({len(archivos_solo_imagenes)}): {archivos_solo_imagenes}')\n",
+        "print(f'Archivos solo en la carpeta de etiquetas ({len(archivos_solo_etiquetas)}): {archivos_solo_etiquetas}')\n"
+      ],
+      "metadata": {
+        "id": "LO0NbdmrcG6_",
+        "outputId": "fab2c397-009a-4d08-dbed-b5536b903423",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archivos en ambas carpetas (239): ['100H0241', '100H0196', '100H0041', '100H0069', '100H0242', '100H0131', '100H0190', '100H0194', '100H0256', '100H0145', '100H0216', '100H0063', '100H0246', '100H0075', '100H0046', '100H0100', '100H0163', '100H0094', '100H0129', '100H0232', '100H0153', '100H0104', '100H0095', '100H0248', '100H0198', '100H0098', '100H0215', '100H0236', '100H0020', '100H0151', '100H0142', '100H0002', '100H0217', '100H0047', '100H0008', '100H0060', '100H0205', '100H0177', '100H0031', '100H0086', '100H0249', '100H0188', '100H0019', '100H0191', '100H0089', '100H0247', '100H0169', '100H0174', '100H0081', '100H0044', '100H0083', '100H0092', '100H0262', '100H0071', '100H0143', '100H0164', '100H0189', '100H0146', '100H0049', '100H0012', '100H0101', '100H0222', '100H0065', '100H0137', '100H0175', '100H0130', '100H0170', '100H0179', '100H0117', '100H0226', '100H0099', '100H0223', '100H0023', '100H0245', '100H0182', '100H0058', '100H0068', '100H0212', '100H0090', '100H0126', '100H0186', '100H0171', '100H0039', '100H0053', '100H0079', '100H0078', '100H0180', '100H0108', '100H0160', '100H0052', '100H0029', '100H0225', '100H0250', '100H0200', '100H0176', '100H0028', '100H0013', '100H0003', '100H0127', '100H0228', '100H0124', '100H0252', '100H0017', '100H0027', '100H0070', '100H0221', '100H0260', '100H0087', '100H0112', '100H0007', '100H0258', '100H0206', '100H0064', '100H0085', '100H0147', '100H0034', '100H0132', '100H0197', '100H0107', '100H0184', '100H0009', '100H0106', '100H0209', '100H0243', '100H0238', '100H0144', '100H0235', '100H0082', '100H0210', '100H0133', '100H0138', '100H0154', '100H0091', '100H0072', '100H0102', '100H0178', '100H0156', '100H0149', '100H0227', '100H0050', '100H0001', '100H0201', '100H0202', '100H0208', '100H0213', '100H0057', '100H0110', '100H0066', '100H0115', '100H0018', '100H0125', '100H0048', '100H0135', '100H0141', '100H0033', '100H0168', '100H0036', '100H0004', '100H0231', '100H0016', '100H0056', '100H0076', '100H0059', '100H0139', '100H0230', '100H0261', '100H0207', '100H0105', '100H0093', '100H0155', '100H0084', '100H0077', '100H0011', '100H0195', '100H0203', '100H0134', '100H0192', '100H0109', '100H0051', '100H0116', '100H0111', '100H0032', '100H0253', '100H0185', '100H0014', '100H0103', '100H0005', '100H0010', '100H0006', '100H0080', '100H0043', '100H0229', '100H0219', '100H0218', '100H0214', '100H0128', '100H0211', '100H0263', '100H0224', '100H0172', '100H0096', '100H0042', '100H0199', '100H0136', '100H0040', '100H0159', '100H0123', '100H0166', '100H0244', '100H0118', '100H0167', '100H0045', '100H0257', '100H0173', '100H0026', '100H0024', '100H0165', '100H0181', '100H0015', '100H0088', '100H0152', '100H0265', '100H0119', '100H0067', '100H0233', '100H0025', '100H0162', '100H0251', '100H0074', '100H0240', '100H0054', '100H0140', '100H0030', '100H0035', '100H0239', '100H0157', '100H0234', '100H0193', '100H0204']\n",
+            "Archivos solo en la carpeta de imágenes (0): []\n",
+            "Archivos solo en la carpeta de etiquetas (0): []\n"
           ]
         }
       ]
