--- a/Yolo2Rcnn.ipynb
+++ b/Yolo2Rcnn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaZtR8+wCGuaSa/scpDi4f",
+      "authorship_tag": "ABX9TyMpWVURG9TFpYepRVI6HIn9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u_qwPFlZruwS",
-        "outputId": "ac494962-1821-4db1-d598-b1c8083e138e"
+        "outputId": "686c6581-a361-42dc-b2ef-c22cfcec04e4"
       },
       "outputs": [
         {
@@ -57,6 +57,7 @@
         "import os\n",
         "import random\n",
         "import shutil\n",
+        "import json\n",
         "\n",
         "# Rutas de las carpetas de imágenes y etiquetas originales\n",
         "images_dir = \"/content/drive/MyDrive/TFM/dataset_Jorge_V2/train/images\"\n",
@@ -139,7 +140,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KxXtCqI33o82",
-        "outputId": "6825bf9b-1650-4a4e-ee65-2ac73e0825af"
+        "outputId": "e9e78231-0b50-43bd-8863-1613875ba757"
       },
       "execution_count": 2,
       "outputs": [
@@ -153,10 +154,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Definimos las funciones de lectura y cambio de formato de las etiquetas"
+      ],
+      "metadata": {
+        "id": "3aqlk2cHvnDn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Función para leer archivos .txt de etiquetas de YOLO\n",
         "def read_yolo_labels(yolo_label_dir):\n",
+        "    \"\"\"Función para leer archivos .txt de etiquetas de YOLO.\"\"\"\n",
         "    yolo_labels = {}\n",
         "    for file_name in os.listdir(yolo_label_dir):\n",
         "        if file_name.endswith(\".txt\"):\n",
@@ -176,35 +186,8 @@
         "                yolo_labels[file_name] = labels\n",
         "    return yolo_labels\n",
         "\n",
-        "# Leer archivos de etiquetas de YOLO para train, test y val\n",
-        "train_yolo_labels = read_yolo_labels(train_labels_dir)\n",
-        "test_yolo_labels = read_yolo_labels(test_labels_dir)\n",
-        "val_yolo_labels = read_yolo_labels(val_labels_dir)\n",
-        "\n",
-        "print(\"Etiquetas de YOLO leídas para train, test y val.\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IIxjjvrr7lIU",
-        "outputId": "b0463137-6fea-4030-cadc-a77601504c00"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Etiquetas de YOLO leídas para train, test y val.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def convert_to_mask_rcnn_labels(yolo_labels):\n",
+        "    \"\"\"Convierte un archivo .txt de etiquetas de segmentación de Yolo en un .json de etiquetas de segmentación de Mask RCNN.\"\"\"\n",
         "    mask_rcnn_labels = {}\n",
         "    for file_name, yolo_objs in yolo_labels.items():\n",
         "        mask_rcnn_labels[file_name.replace(\".txt\", \".jpg\")] = {\n",
@@ -226,19 +209,88 @@
         "                    \"class\": obj[\"class_id\"]  # Clase del objeto\n",
         "                }\n",
         "            }\n",
-        "    return mask_rcnn_labels\n"
+        "    return mask_rcnn_labels\n",
+        "\n",
+        "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
+        "    \"\"\"Se indica el directorio que contiene los .json que se quieren juntar en un solo archivo y se indica la ruta donde se quiere guardar dicho archivo.\"\"\"\n",
+        "    # Verificar si el directorio de salida existe, si no, crearlo\n",
+        "    os.makedirs(output_dir, exist_ok=True)\n",
+        "\n",
+        "    # Diccionario para almacenar todos los diccionarios de imágenes\n",
+        "    merged_data = {}\n",
+        "\n",
+        "    # Iterar sobre cada archivo en el directorio de entrada\n",
+        "    for filename in os.listdir(input_dir):\n",
+        "        if filename.endswith(\".json\"):\n",
+        "            filepath = os.path.join(input_dir, filename)\n",
+        "            # Abrir y cargar cada archivo JSON\n",
+        "            with open(filepath, \"r\") as f:\n",
+        "                data = json.load(f)\n",
+        "            # Extraer el nombre del archivo (sin la extensión)\n",
+        "            filename_key = os.path.splitext(filename)[0]\n",
+        "            # Agregar los datos de la imagen al diccionario fusionado\n",
+        "            merged_data[filename_key] = data\n",
+        "\n",
+        "    # Escribir el diccionario fusionado en un archivo JSON en el directorio de salida\n",
+        "    output_file = os.path.join(output_dir, \"merged_labels.json\")\n",
+        "    with open(output_file, \"w\") as f:\n",
+        "        json.dump(merged_data, f, indent=4)"
       ],
       "metadata": {
-        "id": "1D5PYdeuAri1"
+        "id": "k8st8IU1t1ab"
       },
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Leemos las etiquetas en formato YoloV9\n"
+      ],
+      "metadata": {
+        "id": "FWmDJwosu_XC"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "import json\n",
+        "# Leer archivos de etiquetas de YOLO para train, test y val\n",
+        "train_yolo_labels = read_yolo_labels(train_labels_dir)\n",
+        "test_yolo_labels = read_yolo_labels(test_labels_dir)\n",
+        "val_yolo_labels = read_yolo_labels(val_labels_dir)\n",
         "\n",
+        "print(\"Etiquetas de YOLO leídas para train, test y val.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IIxjjvrr7lIU",
+        "outputId": "e2efa6fd-7b4f-45f8-a0e2-4ab3978f0cbf"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Etiquetas de YOLO leídas para train, test y val.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Convertimos las etiquetas en formato Mask RCNN"
+      ],
+      "metadata": {
+        "id": "3SQMSHP1vHRC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Carpeta de train\n",
         "train_mask_rcnn_labels = convert_to_mask_rcnn_labels(train_yolo_labels)\n",
         "train_RCNN_labels_dir = \"/content/dataset_MaskRCNN/train/RCNN_labels\"\n",
@@ -278,223 +330,17 @@
       "metadata": {
         "id": "-t1_cKN4Clmx"
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
-        "    # Verificar si el directorio de salida existe, si no, crearlo\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "    # Inicializar el diccionario para almacenar los datos fusionados\n",
-        "    merged_data = {}\n",
-        "\n",
-        "    # Iterar sobre cada archivo en el directorio de entrada\n",
-        "    for filename in os.listdir(input_dir):\n",
-        "        if filename.endswith(\".json\"):\n",
-        "            filepath = os.path.join(input_dir, filename)\n",
-        "            # Abrir y cargar cada archivo JSON\n",
-        "            with open(filepath, \"r\") as f:\n",
-        "                data = json.load(f)\n",
-        "            # Fusionar los datos en el diccionario\n",
-        "            for key, value in data.items():\n",
-        "                if key in merged_data:\n",
-        "                    # Si la clave ya existe, agregar los valores a la lista existente\n",
-        "                    merged_data[key].append(value)\n",
-        "                else:\n",
-        "                    # Si la clave no existe, crear una nueva lista con el valor\n",
-        "                    merged_data[key] = [value]\n",
-        "\n",
-        "    # Escribir el diccionario fusionado en un archivo JSON en el directorio de salida\n",
-        "    output_file = os.path.join(output_dir, \"merged_labels.json\")\n",
-        "    with open(output_file, \"w\") as f:\n",
-        "        json.dump(merged_data, f, indent=4)"
+        "# Juntamos todas las etiquetas en un solo .json para cada carpeta de Train, Test y Val."
       ],
       "metadata": {
-        "id": "sQmF16ISNWd6"
-      },
-      "execution_count": 25,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import json\n",
-        "\n",
-        "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
-        "    # Verificar si el directorio de salida existe, si no, crearlo\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "    # Lista para almacenar todos los diccionarios de imágenes\n",
-        "    merged_data = []\n",
-        "\n",
-        "    # Iterar sobre cada archivo en el directorio de entrada\n",
-        "    for filename in os.listdir(input_dir):\n",
-        "        if filename.endswith(\".json\"):\n",
-        "            filepath = os.path.join(input_dir, filename)\n",
-        "            # Abrir y cargar cada archivo JSON\n",
-        "            with open(filepath, \"r\") as f:\n",
-        "                data = json.load(f)\n",
-        "            # Agregar los datos de la imagen al diccionario fusionado\n",
-        "            merged_data.append(data)\n",
-        "\n",
-        "    # Escribir la lista de diccionarios fusionados en un archivo JSON en el directorio de salida\n",
-        "    output_file = os.path.join(output_dir, \"merged_labels.json\")\n",
-        "    with open(output_file, \"w\") as f:\n",
-        "        json.dump(merged_data, f, indent=4)\n"
-      ],
-      "metadata": {
-        "id": "dQDrOh91N07s"
-      },
-      "execution_count": 27,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import json\n",
-        "# Version 3\n",
-        "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
-        "    # Verificar si el directorio de salida existe, si no, crearlo\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "    # Lista para almacenar todos los diccionarios de imágenes\n",
-        "    merged_data = []\n",
-        "\n",
-        "    # Iterar sobre cada archivo en el directorio de entrada\n",
-        "    for filename in os.listdir(input_dir):\n",
-        "        if filename.endswith(\".json\"):\n",
-        "            filepath = os.path.join(input_dir, filename)\n",
-        "            # Abrir y cargar cada archivo JSON\n",
-        "            with open(filepath, \"r\") as f:\n",
-        "                data = json.load(f)\n",
-        "            # Agregar los datos de la imagen al diccionario fusionado\n",
-        "            merged_data.append(data)\n",
-        "\n",
-        "    # Escribir la lista de diccionarios fusionados en un archivo JSON en el directorio de salida\n",
-        "    output_file = os.path.join(output_dir, \"merged_labels.json\")\n",
-        "    with open(output_file, \"w\") as f:\n",
-        "        json.dump(merged_data, f, indent=4, separators=(\",\", \": \"))\n"
-      ],
-      "metadata": {
-        "id": "Q1N0gJ6hOi5L"
-      },
-      "execution_count": 30,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import json\n",
-        "#Version 4\n",
-        "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
-        "    # Verificar si el directorio de salida existe, si no, crearlo\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "    # Lista para almacenar todos los diccionarios de imágenes\n",
-        "    merged_data = {}\n",
-        "\n",
-        "    # Iterar sobre cada archivo en el directorio de entrada\n",
-        "    for filename in os.listdir(input_dir):\n",
-        "        if filename.endswith(\".json\"):\n",
-        "            filepath = os.path.join(input_dir, filename)\n",
-        "            # Abrir y cargar cada archivo JSON\n",
-        "            with open(filepath, \"r\") as f:\n",
-        "                data = json.load(f)\n",
-        "            # Extraer la clave filename\n",
-        "            filename_key = data[0][\"filename\"]\n",
-        "            # Agregar los datos de la imagen al diccionario fusionado\n",
-        "            merged_data[filename_key] = data[0]\n",
-        "\n",
-        "    # Escribir el diccionario fusionado en un archivo JSON en el directorio de salida\n",
-        "    output_file = os.path.join(output_dir, \"merged_labels.json\")\n",
-        "    with open(output_file, \"w\") as f:\n",
-        "        json.dump(merged_data, f, indent=4)\n"
-      ],
-      "metadata": {
-        "id": "Gnxex2VaPKma"
-      },
-      "execution_count": 32,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import json\n",
-        "#Version 5\n",
-        "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
-        "    # Verificar si el directorio de salida existe, si no, crearlo\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "    # Lista para almacenar todos los diccionarios de imágenes\n",
-        "    merged_data = {}\n",
-        "\n",
-        "    # Iterar sobre cada archivo en el directorio de entrada\n",
-        "    for filename in os.listdir(input_dir):\n",
-        "        if filename.endswith(\".json\"):\n",
-        "            filepath = os.path.join(input_dir, filename)\n",
-        "            # Abrir y cargar cada archivo JSON\n",
-        "            with open(filepath, \"r\") as f:\n",
-        "                data = json.load(f)\n",
-        "            # Iterar sobre cada elemento en la lista\n",
-        "            for item in data:\n",
-        "                # Extraer la clave filename\n",
-        "                filename_key = item[\"filename\"]\n",
-        "                # Agregar los datos de la imagen al diccionario fusionado\n",
-        "                merged_data[filename_key] = item\n",
-        "\n",
-        "    # Escribir el diccionario fusionado en un archivo JSON en el directorio de salida\n",
-        "    output_file = os.path.join(output_dir, \"merged_labels.json\")\n",
-        "    with open(output_file, \"w\") as f:\n",
-        "        json.dump(merged_data, f, indent=4)\n"
-      ],
-      "metadata": {
-        "id": "lGE2ikjmPaPH"
-      },
-      "execution_count": 34,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import json\n",
-        "#Version 6, funciona pero no me gusta los saltos de linea\n",
-        "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
-        "    # Verificar si el directorio de salida existe, si no, crearlo\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "    # Diccionario para almacenar todos los diccionarios de imágenes\n",
-        "    merged_data = {}\n",
-        "\n",
-        "    # Iterar sobre cada archivo en el directorio de entrada\n",
-        "    for filename in os.listdir(input_dir):\n",
-        "        if filename.endswith(\".json\"):\n",
-        "            filepath = os.path.join(input_dir, filename)\n",
-        "            # Abrir y cargar cada archivo JSON\n",
-        "            with open(filepath, \"r\") as f:\n",
-        "                data = json.load(f)\n",
-        "            # Extraer el nombre del archivo (sin la extensión)\n",
-        "            filename_key = os.path.splitext(filename)[0]\n",
-        "            # Agregar los datos de la imagen al diccionario fusionado\n",
-        "            merged_data[filename_key] = data\n",
-        "\n",
-        "    # Escribir el diccionario fusionado en un archivo JSON en el directorio de salida\n",
-        "    output_file = os.path.join(output_dir, \"merged_labels.json\")\n",
-        "    with open(output_file, \"w\") as f:\n",
-        "        json.dump(merged_data, f, indent=4)\n"
-      ],
-      "metadata": {
-        "id": "7RJMXYxiPjU7"
-      },
-      "execution_count": 36,
-      "outputs": []
+        "id": "Mf8xY0yRvO3z"
+      }
     },
     {
       "cell_type": "code",
@@ -520,7 +366,7 @@
       "metadata": {
         "id": "B86yZOh6MYJs"
       },
-      "execution_count": 37,
+      "execution_count": 6,
       "outputs": []
     }
   ]
