--- a/Yolo2Rcnn.ipynb
+++ b/Yolo2Rcnn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpWVURG9TFpYepRVI6HIn9",
+      "authorship_tag": "ABX9TyNGE8xZuZhBknAyiU/IqgQB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -189,10 +189,10 @@
         "def convert_to_mask_rcnn_labels(yolo_labels):\n",
         "    \"\"\"Convierte un archivo .txt de etiquetas de segmentación de Yolo en un .json de etiquetas de segmentación de Mask RCNN.\"\"\"\n",
         "    mask_rcnn_labels = {}\n",
-        "    for file_name, yolo_objs in yolo_labels.items():\n",
+        "    for file_name, yolo_objs in yolo_labels.items(): ###### En el ejemplo de ballon antes de esto se pone el nombre de la imagen, pero no se si esta bien. ######\n",
         "        mask_rcnn_labels[file_name.replace(\".txt\", \".jpg\")] = {\n",
         "            \"fileref\": \"\",\n",
-        "            \"size\": 123456,  # Tamaño de la imagen (ajustar según sea necesario)\n",
+        "            \"size\": 123456,  ###### Necesito hacer que lea el tamño de la imagen ######\n",
         "            \"filename\": file_name.replace(\".txt\", \".jpg\"),\n",
         "            \"base64_img_data\": \"\",\n",
         "            \"file_attributes\": {},\n",
@@ -202,8 +202,8 @@
         "            mask_rcnn_labels[file_name.replace(\".txt\", \".jpg\")][\"regions\"][str(i)] = {\n",
         "                \"shape_attributes\": {\n",
         "                    \"name\": \"polygon\",\n",
-        "                    \"all_points_x\": [int(point[0] * 123) for point in obj[\"points\"]],  # Ajustar a las dimensiones de la imagen\n",
-        "                    \"all_points_y\": [int(point[1] * 456) for point in obj[\"points\"]]  # Ajustar a las dimensiones de la imagen\n",
+        "                    \"all_points_x\": [int(point[0] * 123) for point in obj[\"points\"]],  ###### Necesito saber que relacion tiene con el formato YoloV9 ######\n",
+        "                    \"all_points_y\": [int(point[1] * 456) for point in obj[\"points\"]]  ###### Necesito saber que relacion tiene con el formato YoloV9 ######\n",
         "                },\n",
         "                \"region_attributes\": {\n",
         "                    \"class\": obj[\"class_id\"]  # Clase del objeto\n",
